return chat info independently
